<package format="2">
  <name>kal2_trajectory_planner_ros_tool</name>
  <version>0.0.0</version>
  <description>todo</description>

  <license>todo</license>
  <maintainer email="todo@todo.com">todo Firstname Lastname</maintainer>
  <author email="todo@todo.com">todo Firstname Lastname</author>
  <url type="repository">https://gitlab.mrt.kit.edu/kognitive_automobile_labor/templates/template_ros_tool</url>

  <!-- Basic ROS and catkin dependencies -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>rospy</exec_depend>
  <test_depend>rostest</test_depend>
  <depend>dynamic_reconfigure</depend>
  <depend>roslib</depend>

  <!-- MRT helper dependencies -->
  <build_depend>mrt_cmake_modules</build_depend>
  <build_depend>rosinterface_handler</build_depend>
  <test_depend>util_testing_ros</test_depend>

  <!-- Additional dependencies -->
  <test_depend>gtest</test_depend>
  <depend>message_filters</depend>
  <depend>tf2_ros</depend>

   <depend>kal2_trajectory_planner</depend>

  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>